--- a/meta.yaml
+++ b/meta.yaml
@@ -1,23 +1,17 @@
+{% set version = "1.1.0" %}
+
 package:
   name: macha
   version: 0.1
 
 source:
-  git_rev: https://github.com/akaupang/macha/releases
-  git_url: https://github.com/akaupang/macha/tree/dev_johannes
-
+  path: macha
+  
 requirements:
   build:
     - python
     - setuptools
-
   run:
     - python
+    - setuptools
 
-test:
-  imports:
-    -parmed
-    -openbabel
-
-about:
-  home: https://github.com/akaupang/macha
