--- a/devtools/meta.yaml
+++ b/devtools/meta.yaml
@@ -5,13 +5,15 @@ package:
   version: 0.1
 
 source:
-  path: macha
+  git_url: https://github.com/akaupang/macha.git
   
 requirements:
   build:
     - python
     - setuptools
-  run:
-    - python
-    - setuptools
+    
+  
+  script: python devtools/setup.py install
+    
+
 
