--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest, ubuntu-latest]
-        python-version: [3.10]
+        python-version: [3.9, 3.10]
 
     steps:
     - uses: actions/checkout@v1
@@ -42,8 +42,6 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-
         channels: conda-forge,defaults
 
         activate-environment: test
