--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -67,5 +67,9 @@ jobs:
       run: |
         pytest -v --cov=macha --cov-report=xml --color=yes macha/tests/
 
-    - name: Codecov
-      uses: codecov/codecov-action@v3.1.0
+    - name: CodeCov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
