--- a/devtools/meta.yaml
+++ b/devtools/meta.yaml
@@ -7,13 +7,18 @@ package:
 source:
   git_url: https://github.com/akaupang/macha.git
   
-requirements:
-  build:
-    - python
-    - setuptools
-    
-  
-  script: python setup.py install
-    
+build:
+  norach: python
+  number: 0
+  script: {{ PYTHON }} -m pip install . -vv   
 
+requirements:
+  host:
+    - pip
+    - python
+  run:
+    - python
+    - pip
+    - parmed
+    - openbabel
 
