first modification for rna

--- a/macha/data/templates/temp_asfe.yaml
+++ b/macha/data/templates/temp_asfe.yaml
@@ -30,6 +30,7 @@ simulation:
     cons: None
     dt: TIMESTEP
     mini_nstep: 5000
+    vdw: "switch"
 
   workload-manager : "slurm"
   GPU: True
